# test-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/test_mcp/: main.py
tests/: test_main.py
