[project]
name = "a-test-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.25.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
test-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "mypy>=1.14.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
